Fix 120 SonarCloud issues: complexity, shadowing, test smells
- Reduce cognitive complexity in DepositCommand by extracting notifyMembers()
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in BankManager
- Fix empty tearDown() and unnecessary throws in MoneyTest
- Use assertEquals/assertNotEquals instead of assertTrue/assertFalse in MoneyTest
- Remove commented-out code blocks in WithdrawCommandTest
- Rename shadowing local variable 'plugin' to 'pluginMock' in 9 test setUp() methods
- Remove ~100 unnecessary Mockito eq() wrappers across all test files

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>